recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:6: error: not found: value lenght
   	avance(length);gauche(angle);spiral(steps-1, angle ,lenght + increment, increment);
                                                            ^